--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
 	<groupId>com.example</groupId>
 	<artifactId>Assignment</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
+	
 	<name>Assignment</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
